# Pumpkin

./: .editorconfig  .gitignore  .gitmodules  BLOCKERS.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile.toml  ORCHESTRATOR.md  README.md  blackboard.py  cron.py  docker-compose.yml  egg-pumpkin.json  fix_prs.py  flake.nix  init_blackboard.py  rust-toolchain.toml  split_prs.py  start-session.sh
examples/hello-world-plugin/: Cargo.toml
examples/hello-world-plugin/src/: lib.rs
plugins/hello-plugin/: Cargo.toml
plugins/hello-plugin/src/: lib.rs
pumpkin/: Cargo.toml  build.rs  log4rs.yaml
pumpkin-android-jni/: Cargo.toml
pumpkin-android-jni/src/: lib.rs
pumpkin-api-macros/: Cargo.toml
pumpkin-api-macros/src/: lib.rs
pumpkin-chunk-system/: Cargo.toml
pumpkin-chunk-system/benches/: chunk_gen.rs
pumpkin-chunk-system/src/: level.rs  lib.rs
pumpkin-chunk-system/src/chunk_system/: channel.rs  chunk_listener.rs  chunk_loading.rs  chunk_state.rs  generation.rs  generation_cache.rs  schedule.rs  worker_logic.rs
pumpkin-chunk-system/src/lighting/: engine.rs  runtime.rs  storage.rs
pumpkin-codecs-macros/: Cargo.toml
pumpkin-codecs-macros/src/: attribute.rs  decode.rs  encode.rs  field.rs  lib.rs
pumpkin-codegen/: Cargo.toml
pumpkin-codegen/src/: advancement.rs  biome.rs  block.rs  block_state_remap.rs  carver.rs  chest_loot.rs  chunk_gen_settings.rs  configured_feature.rs  damage_type.rs  dimension.rs  enchantments.rs  entity_hurt_sound.rs  entity_type.rs  flower_pot_transformations.rs  fluid.rs  item.rs  jukebox_song.rs  loot.rs  main.rs  meta_data_type.rs  noise_parameter.rs  noise_router.rs  packet.rs  placed_feature.rs  potion_brewing.rs  recipes.rs  registry.rs  slot_ranges.rs  tag.rs  tracked_data.rs  translations.rs  villager.rs
pumpkin-codegen/src/remap/: block_state.rs  entity_id.rs  item_id.rs  mod.rs
pumpkin-codegen/src/wit/: utils.rs
pumpkin-inventory/: Cargo.toml  README.md
pumpkin-inventory/src/: anvil.rs  beacon.rs  brewing_stand.rs  cartography_table.rs  container_click.rs  crafting.rs  double.rs  drag_handler.rs  enchanting_table.rs  entity_equipment.rs  equipment_slot.rs  error.rs  generic_container_screen_handler.rs  grindstone.rs  gui_builder.rs  inventory.rs  lectern.rs  lib.rs  loom.rs  merchant.rs  open_container.rs  player.rs  player_inventory.rs  player_screen_handler.rs  readme.md  screen_handler.rs  slot.rs  smithing.rs  stonecutter.rs  sync_handler.rs  viewer_count_tracker.rs  window_property.rs
pumpkin-inventory/src/anvil/: anvil_screen_handler.rs
pumpkin-inventory/src/brewing/: brewing_screen_handler.rs  mod.rs
pumpkin-inventory/src/crafting/: crafting_inventory.rs  crafting_screen_handler.rs  mod.rs  recipes.rs  recipies.rs  special_recipes.rs
pumpkin-inventory/src/furnace/: furnace_screen_handler.rs  furnace_slot.rs
pumpkin-inventory/src/furnace_like/: furnace_like_screen_handler.rs  furnace_like_slot.rs  mod.rs
pumpkin-inventory/src/merchant/: merchant_screen_handler.rs
pumpkin-inventory/src/player/: ender_chest_inventory.rs  mod.rs  player_inventory.rs  player_screen_handler.rs
pumpkin-plugin-api/: Cargo.toml  build.rs
pumpkin-plugin-api/src/: commands.rs  events.rs  i18n.rs  lib.rs  packet.rs  packet_ids_full.rs  permissions.rs  scheduler.rs  text_component.rs
pumpkin-plugin-api/tests/: java_chat.rs  packet_catalog.rs  packet_codec.rs  packet_ids.rs  packet_ids_full.rs  packet_schema.rs  packet_typed_keys.rs
pumpkin-plugin-host/: Cargo.toml  README.md
pumpkin-plugin-host/src/: lib.rs  metadata.rs
pumpkin-plugin-host/src/wasm_host/: logging.rs  mod.rs  state.rs
pumpkin-protocol/: Cargo.toml
pumpkin-protocol/fuzz/: Cargo.toml
pumpkin-protocol/fuzz/fuzz_targets/: encoder_bedrock.rs  encoder_java.rs
pumpkin-protocol/src/: lib.rs  packet.rs  packet_decoder.rs  packet_encoder.rs  query.rs
pumpkin-protocol/src/bedrock/: ack.rs  frame_set.rs  mod.rs  network_item.rs  packet_decoder.rs  packet_encoder.rs
pumpkin-protocol/src/codec/: ascii_string.rs  bedrock_block_pos.rs  bit_set.rs  bitset.rs  data_component.rs  identifier.rs  item_stack_seralizer.rs  little_endian.rs  mod.rs  resource_location.rs  slot.rs  socket_address.rs  u24_type.rs  var_int.rs  var_long.rs  var_uint.rs  var_ulong.rs  velocity.rs
pumpkin-protocol/src/dto/: mod.rs
pumpkin-protocol/src/java/: packet_decoder.rs  packet_encoder.rs
pumpkin-protocol/src/ser/: deserializer.rs  mod.rs  serializer.rs
pumpkin-protocol/src/serial/: deserializer.rs  mod.rs  serializer.rs
pumpkin-storage/: Cargo.toml
pumpkin-storage/src/: banlist.rs  banned_ip.rs  banned_player.rs  chunk.rs  conformance_tests.rs  error.rs  level_info.rs  lib.rs  memory.rs  null.rs  op.rs  player_data.rs  poi.rs  user_cache.rs  vanilla.rs  whitelist.rs  world_info.rs
pumpkin-storage/src/memory/: banned_ip.rs  banned_player.rs  chunk.rs  level_info.rs  mod.rs  op.rs  player_data.rs  poi.rs  user_cache.rs  whitelist.rs  world_info.rs
pumpkin-storage/src/vanilla/: banned_ip.rs  banned_player.rs  json_list.rs  level_info.rs  mod.rs  op.rs  player_data.rs  poi.rs  user_cache.rs  whitelist.rs  world_info.rs
pumpkin-store/: Cargo.toml
pumpkin-store/src/: cached_store.rs  error.rs  lance_store.rs  lib.rs  static_store.rs  traits.rs
pumpkin/benches/: bench_tag.rs
pumpkin/src/: crash.rs  error.rs  lib.rs  logging.rs  main.rs  server_manager.rs
pumpkin/src/block/: block_properties_manager.rs  container.rs  loot.rs  mod.rs  properties.rs  pumpkin_block.rs  pumpkin_fluid.rs  redstone_controller.rs  redstone_view.rs  registry.rs
pumpkin/src/block_entities/: chest.rs  mod.rs
pumpkin/src/command/: argument_builder.rs  client_cmd_suggestions.rs  client_suggestions.rs  dispatcher.rs  mod.rs  parser.rs  snbt.rs  string_reader.rs  suggestion.rs
pumpkin/src/data/: advancement_data.rs  banlist_serializer.rs  banned_ip.rs  banned_ip_data.rs  banned_player.rs  banned_player_data.rs  mod.rs  op.rs  op_data.rs  player_data.rs  player_profile.rs  player_server.rs  player_server_data.rs  usercache.rs  whitelist_data.rs
pumpkin/src/entity/: area_effect_cloud.rs  mod.rs  (+15 more)
(+2255 files in other folders)
