[workspace]
resolver = "3"
members = [
    "pumpkin-api-macros",
    "pumpkin-config",
    "pumpkin-util",
    "pumpkin-inventory",
    "pumpkin-macros/",
    "pumpkin-protocol/",
    "pumpkin-registry/",
    "pumpkin-world",
    "pumpkin/",
    "pumpkin-data",
]

[workspace.package]
version = "0.1.0-dev+1.21.11"
edition = "2024"
rust-version = "1.89"

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true

[profile.profiling]
inherits = "release"
debug = true

[profile.dev]
debug = "line-tables-only"
panic = "abort"

[workspace.dependencies]
log = "*"
tokio = { version = "*", default-features = false }
syn = { version = "*", default-features = false, features = ["printing"] }
thiserror = "*"
bytes = { version = "*", default-features = false }

# Concurrency/Parallelism and Synchronization
futures = { version = "*", default-features = false, features = ["executor"] }
rayon = "*"
crossbeam = "*"

uuid = { version = "*", features = ["serde", "v3", "v4"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"

tempfile = { version = "*", default-features = false }
proc-macro-error2 = { version = "*", default-features = false }
aes = "*"
async-compression = "*"
base64 = "*"
bitflags = "*"
cesu8 = "*"
cfb8 = "*"
colored = "*"
console-subscriber = { version = "*", default-features = false }
crc-fast = { version = "*", features = ["std"], default-features = false }
criterion = { version = "*", default-features = false }
crossbeam-utils = { version = "*", default-features = false }
crossfire = "*"
dashmap = "*"
ecdsa = { version = "*", default-features = false }
enum_dispatch = "*"
env_logger = { version = "*", default-features = false }
flate2 = { version = "*", features = ["any_impl", "miniz_oxide"], default-features = false }
heck = "*"
hmac = ">=0.13.0-rc.3"
indexmap = "*"
itertools = { version = "*", features = ["use_alloc"], default-features = false }
libloading = "*"
lru = { version = "*", default-features = false }
lz4-java-wrc = { version = "*", features = ["lz4_flex"], default-features = false }
md5 = { version = "*", default-features = false }
num-bigint = { version = "*", default-features = false }
num-derive = "*"
num-traits = "*"
num_cpus = "*"
p384 = { version = "*", features = ["pkcs8", "std"], default-features = false }
phf = { version = "*", default-features = false }
pkcs8 = ">=0.11.0-rc.8"
proc-macro2 = { version = "*", default-features = false }
pumpkin-config = { path = "pumpkin-config" }
pumpkin-data = { path = "pumpkin-data" }
pumpkin-inventory = { path = "pumpkin-inventory" }
pumpkin-macros = { path = "pumpkin-macros" }
pumpkin-nbt = { path = "pumpkin-nbt" }
pumpkin-protocol = { path = "pumpkin-protocol" }
pumpkin-registry = { path = "pumpkin-registry" }
pumpkin-util = { path = "pumpkin-util" }
pumpkin-world = { path = "pumpkin-world" }
quote = "*"
rand = { git = "https://github.com/rust-random/rand"}
rsa = ">=0.10.0-rc.12"
rustc-hash = "*"
rustyline-async = "*"
ruzstd = "*"
serde_json5 = "*"
sha1 = ">=0.11.0-rc.3"
sha2 = ">=0.11.0-rc.3"
signature = "*"
simplelog = "*"
slotmap = "*"
take_mut = "*"
temp-dir = "*"
thread_local = "*"
time = "*"
tokio-util = "*"
toml = "*"
ureq = "*"
