[package]
name = "pumpkin-api-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "parsing", "printing", "proc-macro"] }
quote.workspace = true
proc-macro2.workspace = true
proc-macro-error2.workspace = true
