[package]
name = "pumpkin-chunk-system"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
pumpkin-world.workspace = true
pumpkin-data.workspace = true
pumpkin-config.workspace = true
pumpkin-util.workspace = true
pumpkin-nbt.workspace = true

rand.workspace = true
arc-swap.workspace = true
rustc-hash.workspace = true
dashmap.workspace = true
slotmap.workspace = true
crossfire.workspace = true
crossbeam.workspace = true
tracing.workspace = true
itertools.workspace = true

rayon.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
[lints]
workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }

[[bench]]
name = "chunk_gen"
harness = false
