[package]
name = "pumpkin-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
indexmap = { workspace = true, features = ["serde"] }
heck.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

rayon.workspace = true

proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full", "extra-traits"] }

pumpkin-util = { path = "../pumpkin-util" }
pumpkin-nbt = { path = "../pumpkin-nbt" }

[lints]
workspace = true
