[package]
name = "pumpkin-inventory"
version.workspace = true
edition.workspace = true

[dependencies]
pumpkin-protocol = { path = "../pumpkin-protocol" }
pumpkin-data = { path = "../pumpkin-data" }

pumpkin-world = { path = "../pumpkin-world" }
pumpkin-registry = {path = "../pumpkin-registry"}
pumpkin-util = { path = "../pumpkin-util" }

log.workspace = true
rayon.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.44", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "io-std",
    "signal",
    "fs",
] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1.44", features = [
    "macros",
    "rt",
    "sync",
    "io-util",
] }