[package]
name = "pumpkin-plugin-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmparser = { workspace = true }

postcard = { workspace = true }
tracing-serde-structured = { workspace = true }
tracing = { workspace = true }

thiserror = { workspace = true }
tokio = { workspace = true }

pumpkin-util = { workspace = true }

[lints]
workspace = true
