[package]
name = "pumpkin-protocol"
version.workspace = true
edition.workspace = true

[features]
default = ["packets", "query"]
packets = ["serverbound", "clientbound"]
serverbound = []
clientbound = []
query = []

[dependencies]
pumpkin-nbt = { path = "../pumpkin-nbt" }
pumpkin-data = { path = "../pumpkin-data" }
pumpkin-macros = { path = "../pumpkin-macros" }
pumpkin-world = { path = "../pumpkin-world" }
pumpkin-util = { path = "../pumpkin-util" }

uuid.workspace = true
serde.workspace = true
thiserror.workspace = true
log.workspace = true
bytes.workspace = true

# encryption
aes = "0.8"
cfb8 = "0.8"

# compression
async-compression = { version = "0.4.20", features = ["tokio", "zlib"] }

take_mut = "0.2.2"

[dev-dependencies]
# Validate correctness
flate2 = "1.1.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.44", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "io-std",
    "signal",
    "fs",
] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1.44", features = [
    "macros",
    "rt",
    "sync",
    "io-util",
] }
