[package]
name = "pumpkin-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["query"]
query = []

[dependencies]
pumpkin-nbt.workspace = true
pumpkin-data.workspace = true
pumpkin-macros.workspace = true
pumpkin-world.workspace = true
pumpkin-util.workspace = true

uuid.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net"] }
bytes.workspace = true

# encryption
aes.workspace = true
cfb8.workspace = true

# compression
async-compression = { workspace = true, features = ["tokio", "zlib"] }

take_mut.workspace = true
bitflags.workspace = true

[dev-dependencies]
# Validate correctness
flate2.workspace = true
