[package]
name = "pumpkin-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }

pumpkin-data.workspace = true
pumpkin-nbt.workspace = true
pumpkin-util.workspace = true

serde.workspace = true

[lints]
workspace = true
