[package]
name = "pumpkin-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }

pumpkin-data.workspace = true
pumpkin-nbt.workspace = true
pumpkin-util.workspace = true

flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
time = { workspace = true, features = ["formatting", "parsing", "macros", "serde"] }
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["fs", "io-util", "sync", "macros", "rt"] }
temp-dir.workspace = true

[lints]
workspace = true
